--- a/css/olya.css
+++ b/css/olya.css
@@ -91,7 +91,7 @@ body {
   color: var(--color-font-h2);
 }
 
-.about-us-info-p {
+.about-us-info-description {
   text-align: start;
   padding: 0px 10px;
   color:var(--color-font-main) ;
@@ -123,14 +123,13 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-
   .about-us-content {
     flex-direction: row;
     align-items: center;
     justify-content: center;
   }
 
-  .about-us-info-p {
+  .about-us-info-description {
     padding: 0px 10px;
   }
 
@@ -147,11 +146,9 @@ body {
     top: 20px;
     left: 65px;
   }
-
 } 
 
 @media screen and (min-width: 1050px) {
-
   .about-us-picture .about-us-picture-macbook {
     width: 720px;
   }
@@ -161,5 +158,4 @@ body {
     top: 20px;
     left: 80px;
   }
-
 }
