--- a/css/lysachenko.css
+++ b/css/lysachenko.css
@@ -38,10 +38,8 @@ body {
 .container {
   display: flex;
   justify-content: center;
-}
-
-.container {
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .team-member {
@@ -76,6 +74,8 @@ body {
   justify-content: center;
   margin-top: 60px;
   flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .image-footer {
